// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`token refactor moves nothing on the web side > classic inline styles are unchanged 1`] = `
[
  "0:font-family: "Carlito", sans-serif; font-size: 11pt; line-height: 1.15; background: rgb(255, 255, 255); color: rgb(0, 0, 0); width: 794px; min-height: 1123px; padding: 48px; box-sizing: border-box;",
  "1:text-align: center; margin-bottom: 16px;",
  "2:font-family: "Carlito", sans-serif; font-size: 20pt; font-weight: 700;",
  "3:font-size: 12pt; color: rgb(85, 85, 85); margin-top: 2px;",
  "4:font-size: 10pt; color: rgb(85, 85, 85); margin-top: 4px;",
  "5:color: inherit; text-decoration: none;",
  "6:",
  "7:font-family: "Carlito", sans-serif; font-size: 13pt; font-weight: 700; color: rgb(30, 58, 95); border-bottom: 1.5px solid rgb(30, 58, 95); padding-bottom: 2px; margin-top: 18px; margin-bottom: 8px;",
  "8:font-size: 10pt;",
  "9:",
  "10:",
  "11:font-family: "Carlito", sans-serif; font-size: 13pt; font-weight: 700; color: rgb(30, 58, 95); border-bottom: 1.5px solid rgb(30, 58, 95); padding-bottom: 2px; margin-top: 18px; margin-bottom: 8px;",
  "12:margin-bottom: 10px;",
  "13:font-size: 11pt;",
  "14:margin-top: 0px;",
  "15:display: flex; justify-content: space-between; align-items: baseline;",
  "16:color: rgb(0, 102, 204); font-weight: 500; font-size: 10.5pt;",
  "17:font-size: 10pt; color: rgb(102, 102, 102);",
  "18:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "19:",
  "20:",
  "21:",
  "22:",
  "23:",
  "24:font-family: "Carlito", sans-serif; font-size: 13pt; font-weight: 700; color: rgb(30, 58, 95); border-bottom: 1.5px solid rgb(30, 58, 95); padding-bottom: 2px; margin-top: 18px; margin-bottom: 8px;",
  "25:margin-bottom: 8px;",
  "26:",
  "27:margin-top: 0px;",
  "28:display: flex; justify-content: space-between; align-items: baseline;",
  "29:font-size: 10.5pt;",
  "30:font-size: 10pt; color: rgb(102, 102, 102);",
  "31:",
  "32:font-family: "Carlito", sans-serif; font-size: 13pt; font-weight: 700; color: rgb(30, 58, 95); border-bottom: 1.5px solid rgb(30, 58, 95); padding-bottom: 2px; margin-top: 18px; margin-bottom: 8px;",
  "33:font-size: 10pt; line-height: 1.7;",
  "34:display: flex; gap: 16px; margin-bottom: 2px;",
  "35:min-width: 130px; font-weight: 600; flex-shrink: 0;",
  "36:color: rgb(68, 68, 68); flex: 1 1 0%;",
  "37:",
  "38:font-family: "Carlito", sans-serif; font-size: 13pt; font-weight: 700; color: rgb(30, 58, 95); border-bottom: 1.5px solid rgb(30, 58, 95); padding-bottom: 2px; margin-top: 18px; margin-bottom: 8px;",
  "39:margin-bottom: 11px;",
  "40:display: flex; justify-content: space-between; align-items: baseline;",
  "41:",
  "42:font-size: 10pt; color: rgb(102, 102, 102);",
  "43:font-size: 10pt; margin-top: 3px;",
  "44:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "45:",
  "46:font-size: 10pt; color: rgb(102, 102, 102); margin-top: 2px;",
]
`;

exports[`token refactor moves nothing on the web side > executive inline styles are unchanged 1`] = `
[
  "0:font-family: "Carlito", sans-serif; font-size: 11pt; line-height: 1.15; background: rgb(255, 255, 255); color: rgb(0, 0, 0); width: 794px; min-height: 1123px; padding: 48px; box-sizing: border-box;",
  "1:margin-bottom: 4px;",
  "2:font-family: "Carlito", sans-serif; font-size: 22pt; font-weight: 700; letter-spacing: 0.01em; color: rgb(30, 58, 95);",
  "3:font-size: 12pt; color: rgb(0, 102, 204); font-style: italic; margin-top: 1px;",
  "4:border-top: 2px solid rgb(30, 58, 95); border-bottom: 0.75px solid rgb(30, 58, 95); height: 3px; margin: 6px 0px 8px;",
  "5:font-size: 10pt; color: rgb(85, 85, 85);",
  "6:color: inherit; text-decoration: none;",
  "7:font-size: 10.5pt; margin-top: 12px; text-align: justify;",
  "8:",
  "9:",
  "10:font-family: "Carlito", sans-serif; font-size: 11.5pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.14em; margin-top: 18px; margin-bottom: 7px; padding-bottom: 3px; border-bottom: 1px solid rgb(30, 58, 95);",
  "11:margin-bottom: 10px;",
  "12:font-size: 11pt;",
  "13:margin-top: 0px;",
  "14:display: flex; justify-content: space-between; align-items: baseline;",
  "15:color: rgb(0, 102, 204); font-style: italic; font-size: 10.5pt;",
  "16:font-size: 10pt; color: rgb(102, 102, 102);",
  "17:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "18:",
  "19:",
  "20:",
  "21:",
  "22:",
  "23:font-family: "Carlito", sans-serif; font-size: 11.5pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.14em; margin-top: 18px; margin-bottom: 7px; padding-bottom: 3px; border-bottom: 1px solid rgb(30, 58, 95);",
  "24:margin-bottom: 8px;",
  "25:",
  "26:margin-top: 0px;",
  "27:display: flex; justify-content: space-between; align-items: baseline;",
  "28:font-size: 10.5pt; font-style: italic;",
  "29:font-size: 10pt; color: rgb(102, 102, 102);",
  "30:",
  "31:font-family: "Carlito", sans-serif; font-size: 11.5pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.14em; margin-top: 18px; margin-bottom: 7px; padding-bottom: 3px; border-bottom: 1px solid rgb(30, 58, 95);",
  "32:font-size: 10pt; line-height: 1.7;",
  "33:display: flex; gap: 16px; margin-bottom: 2px;",
  "34:min-width: 130px; font-weight: 600; flex-shrink: 0;",
  "35:color: rgb(68, 68, 68); flex: 1 1 0%;",
  "36:",
  "37:font-family: "Carlito", sans-serif; font-size: 11.5pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.14em; margin-top: 18px; margin-bottom: 7px; padding-bottom: 3px; border-bottom: 1px solid rgb(30, 58, 95);",
  "38:margin-bottom: 11px;",
  "39:display: flex; justify-content: space-between; align-items: baseline;",
  "40:",
  "41:font-size: 10pt; color: rgb(102, 102, 102);",
  "42:font-size: 10pt; margin-top: 3px; text-align: justify;",
  "43:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "44:",
  "45:font-size: 10pt; color: rgb(102, 102, 102); margin-top: 2px;",
]
`;

exports[`token refactor moves nothing on the web side > minimal inline styles are unchanged 1`] = `
[
  "0:font-family: "Carlito", sans-serif; font-size: 11pt; line-height: 1.15; background: rgb(255, 255, 255); color: rgb(0, 0, 0); width: 794px; min-height: 1123px; padding: 48px; box-sizing: border-box;",
  "1:text-align: center; margin-bottom: 20px;",
  "2:font-family: "Carlito", sans-serif; font-size: 22pt; font-weight: 700; letter-spacing: -0.02em;",
  "3:font-size: 11pt; color: rgb(85, 85, 85); margin-top: 3px;",
  "4:font-size: 10pt; color: rgb(119, 119, 119); margin-top: 4px;",
  "5:color: inherit; text-decoration: none;",
  "6:font-size: 10pt; color: rgb(68, 68, 68); margin-bottom: 16px;",
  "7:",
  "8:",
  "9:font-family: "Carlito", sans-serif; font-size: 10pt; font-weight: 700; text-transform: uppercase; letter-spacing: 0.12em; color: rgb(51, 51, 51); margin-top: 20px; margin-bottom: 8px;",
  "10:margin-bottom: 10px;",
  "11:font-size: 11pt;",
  "12:margin-top: 0px;",
  "13:display: flex; justify-content: space-between; align-items: baseline;",
  "14:color: rgb(0, 102, 204); font-weight: 500; font-size: 10.5pt;",
  "15:font-size: 10pt; color: rgb(102, 102, 102);",
  "16:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "17:",
  "18:",
  "19:",
  "20:",
  "21:",
  "22:font-family: "Carlito", sans-serif; font-size: 10pt; font-weight: 700; text-transform: uppercase; letter-spacing: 0.12em; color: rgb(51, 51, 51); margin-top: 20px; margin-bottom: 8px;",
  "23:margin-bottom: 8px;",
  "24:",
  "25:margin-top: 0px;",
  "26:display: flex; justify-content: space-between; align-items: baseline;",
  "27:font-size: 10.5pt;",
  "28:font-size: 10pt; color: rgb(102, 102, 102);",
  "29:",
  "30:font-family: "Carlito", sans-serif; font-size: 10pt; font-weight: 700; text-transform: uppercase; letter-spacing: 0.12em; color: rgb(51, 51, 51); margin-top: 20px; margin-bottom: 8px;",
  "31:font-size: 10pt; line-height: 1.7;",
  "32:display: flex; gap: 16px; margin-bottom: 2px;",
  "33:min-width: 130px; font-weight: 600; flex-shrink: 0;",
  "34:color: rgb(68, 68, 68); flex: 1 1 0%;",
  "35:",
  "36:font-family: "Carlito", sans-serif; font-size: 10pt; font-weight: 700; text-transform: uppercase; letter-spacing: 0.12em; color: rgb(51, 51, 51); margin-top: 20px; margin-bottom: 8px;",
  "37:margin-bottom: 11px;",
  "38:display: flex; justify-content: space-between; align-items: baseline;",
  "39:",
  "40:font-size: 10pt; color: rgb(102, 102, 102);",
  "41:font-size: 10pt; margin-top: 3px;",
  "42:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "43:",
  "44:font-size: 10pt; color: rgb(102, 102, 102); margin-top: 2px;",
]
`;

exports[`token refactor moves nothing on the web side > modern inline styles are unchanged 1`] = `
[
  "0:font-family: "Carlito", sans-serif; font-size: 11pt; line-height: 1.15; background: rgb(255, 255, 255); color: rgb(0, 0, 0); width: 794px; min-height: 1123px; box-sizing: border-box;",
  "1:background: rgb(30, 58, 95); color: rgb(255, 255, 255); padding: 48px 48px 36px;",
  "2:font-family: "Carlito", sans-serif; font-size: 22pt; font-weight: 700;",
  "3:font-size: 12pt; opacity: 0.85; margin-top: 2px;",
  "4:font-size: 10pt; opacity: 0.75; margin-top: 4px;",
  "5:padding: 48px;",
  "6:margin-bottom: 12px; font-size: 10pt; color: rgb(68, 68, 68);",
  "7:",
  "8:",
  "9:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(0, 102, 204); text-transform: uppercase; letter-spacing: 0.08em; margin-top: 16px; margin-bottom: 8px;",
  "10:margin-bottom: 10px;",
  "11:font-size: 11pt;",
  "12:margin-top: 0px;",
  "13:display: flex; justify-content: space-between; align-items: baseline;",
  "14:color: rgb(0, 102, 204); font-weight: 500; font-size: 10.5pt;",
  "15:font-size: 10pt; color: rgb(102, 102, 102);",
  "16:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "17:",
  "18:",
  "19:",
  "20:",
  "21:",
  "22:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(0, 102, 204); text-transform: uppercase; letter-spacing: 0.08em; margin-top: 16px; margin-bottom: 8px;",
  "23:margin-bottom: 8px;",
  "24:",
  "25:margin-top: 0px;",
  "26:display: flex; justify-content: space-between; align-items: baseline;",
  "27:font-size: 10.5pt;",
  "28:font-size: 10pt; color: rgb(102, 102, 102);",
  "29:",
  "30:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(0, 102, 204); text-transform: uppercase; letter-spacing: 0.08em; margin-top: 16px; margin-bottom: 8px;",
  "31:font-size: 10pt; line-height: 1.7;",
  "32:display: flex; gap: 16px; margin-bottom: 2px;",
  "33:min-width: 130px; font-weight: 600; flex-shrink: 0;",
  "34:color: rgb(68, 68, 68); flex: 1 1 0%;",
  "35:",
  "36:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(0, 102, 204); text-transform: uppercase; letter-spacing: 0.08em; margin-top: 16px; margin-bottom: 8px;",
  "37:margin-bottom: 11px;",
  "38:display: flex; justify-content: space-between; align-items: baseline;",
  "39:",
  "40:font-size: 10pt; color: rgb(102, 102, 102);",
  "41:font-size: 10pt; margin-top: 3px;",
  "42:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "43:",
  "44:font-size: 10pt; color: rgb(102, 102, 102); margin-top: 2px;",
]
`;

exports[`token refactor moves nothing on the web side > sidebar inline styles are unchanged 1`] = `
[
  "0:font-family: "Carlito", sans-serif; font-size: 11pt; line-height: 1.15; background: rgb(255, 255, 255); color: rgb(0, 0, 0); width: 794px; min-height: 1123px; box-sizing: border-box; display: flex; align-items: stretch;",
  "1:flex: 0 0 33%; background: rgb(30, 58, 95); color: rgb(255, 255, 255); padding: 48px; box-sizing: border-box;",
  "2:font-family: "Carlito", sans-serif; font-size: 18pt; font-weight: 700; line-height: 1.1;",
  "3:font-size: 10.5pt; opacity: 0.85; margin-top: 3px;",
  "4:font-size: 10pt; opacity: 0.9; margin-top: 12px; line-height: 1.9; word-break: break-word;",
  "5:",
  "6:",
  "7:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(255, 255, 255); text-transform: uppercase; letter-spacing: 0.1em; margin-top: 18px; margin-bottom: 7px; padding-bottom: 3px; border-bottom: 1px solid rgb(0, 102, 204);",
  "8:font-size: 10pt; line-height: 1.6;",
  "9:margin-bottom: 6px;",
  "10:font-weight: 600;",
  "11:opacity: 0.85;",
  "12:flex: 1 1 0%; padding: 48px; box-sizing: border-box;",
  "13:font-size: 10pt; color: rgb(68, 68, 68); margin-bottom: 6px;",
  "14:",
  "15:",
  "16:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.06em; margin-top: 16px; margin-bottom: 8px; padding-bottom: 2px; border-bottom: 2px solid rgb(0, 102, 204);",
  "17:margin-bottom: 10px;",
  "18:font-size: 11pt;",
  "19:margin-top: 0px;",
  "20:display: flex; justify-content: space-between; align-items: baseline;",
  "21:color: rgb(0, 102, 204); font-weight: 500; font-size: 10.5pt;",
  "22:font-size: 10pt; color: rgb(102, 102, 102);",
  "23:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "24:",
  "25:",
  "26:",
  "27:",
  "28:",
  "29:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.06em; margin-top: 16px; margin-bottom: 8px; padding-bottom: 2px; border-bottom: 2px solid rgb(0, 102, 204);",
  "30:margin-bottom: 8px;",
  "31:",
  "32:margin-top: 0px;",
  "33:display: flex; justify-content: space-between; align-items: baseline;",
  "34:font-size: 10.5pt;",
  "35:font-size: 10pt; color: rgb(102, 102, 102);",
  "36:",
  "37:font-family: "Carlito", sans-serif; font-size: 12pt; font-weight: 700; color: rgb(30, 58, 95); text-transform: uppercase; letter-spacing: 0.06em; margin-top: 16px; margin-bottom: 8px; padding-bottom: 2px; border-bottom: 2px solid rgb(0, 102, 204);",
  "38:margin-bottom: 11px;",
  "39:display: flex; justify-content: space-between; align-items: baseline;",
  "40:",
  "41:font-size: 10pt; color: rgb(102, 102, 102);",
  "42:font-size: 10pt; margin-top: 3px;",
  "43:margin: 4px 0px 0px; padding-left: 18px; font-size: 10pt;",
  "44:",
  "45:font-size: 10pt; color: rgb(102, 102, 102); margin-top: 2px;",
]
`;
